// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Vote /> Rendering should render Vote page correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Connect(Vote) />
</Router>
`;

exports[`<Vote /> Rendering should render Vote page correctly with its children when candidates is loaded 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Connect(Vote)
        candidates={
          Array [
            Object {
              "firstname": "john",
              "id": 1,
              "lastname": "mark",
              "logourl": "https://app.com/logo",
              "partyname": "All peoples party",
              "passportUrl": "https://w.pe./img",
            },
          ]
        }
        candidatesLoaded={true}
      >
        <Vote
          candidates={Array []}
          candidatesLoaded={false}
          candidatesLoading={false}
          cleanUp={[Function]}
          error={null}
          getOfficeCandidates={[Function]}
          getOffices={[Function]}
          getVotedCandidates={[Function]}
          offices={Array []}
          token=""
          voteCandidate={[Function]}
          voted={false}
          votedCandidates={Array []}
        >
          <DashboardContainer>
            <div
              className="container dashboard"
            >
              <Connect(DashboardNavBar)>
                <DashboardNavBar
                  signout={[Function]}
                  user={Object {}}
                >
                  <header>
                    <div
                      className="title"
                    >
                      <h3>
                        User Dashboard
                      </h3>
                    </div>
                    <div
                      className="logout-con"
                    >
                      <button
                        className="btn btn-warning"
                        id="logout"
                        onClick={[Function]}
                      >
                        <a
                          href="#"
                        >
                          Logout
                        </a>
                      </button>
                    </div>
                  </header>
                </DashboardNavBar>
              </Connect(DashboardNavBar)>
              <div
                className="main"
              >
                <UserDashboardSideBar>
                  <aside>
                    <Connect(UserInfo)>
                      <UserInfo
                        user={Object {}}
                      >
                        <div
                          className="user"
                        >
                          <div
                            className="photo"
                          >
                            <img
                              alt="User"
                              id="user-img"
                              src="test-file-stub"
                            />
                          </div>
                          <div
                            className="username"
                          >
                            <p
                              id="user-name"
                            >
                              undefined undefined
                            </p>
                          </div>
                        </div>
                      </UserInfo>
                    </Connect(UserInfo)>
                    <div
                      className="menu"
                    >
                      <ul>
                        <li>
                          <Link
                            to="/vote"
                          >
                            <a
                              href="/vote"
                              onClick={[Function]}
                            >
                              Vote
                            </a>
                          </Link>
                        </li>
                        <li>
                          <Link
                            to="/myvote"
                          >
                            <a
                              href="/myvote"
                              onClick={[Function]}
                            >
                              My Votes
                            </a>
                          </Link>
                        </li>
                      </ul>
                    </div>
                  </aside>
                </UserDashboardSideBar>
                <article>
                  <div
                    className="title-con"
                  >
                    <h3>
                      Vote Choice Candidate
                    </h3>
                    <hr />
                  </div>
                  <div
                    id="alert"
                  />
                  <div
                    className="select-con"
                  >
                    <label
                      htmlFor="office"
                    >
                      Political Office
                    </label>
                    <select
                      id="office-select"
                      name="office"
                      onChange={[Function]}
                    >
                      <option>
                        Select an Office
                      </option>
                    </select>
                  </div>
                  <div>
                    <table
                      id="candidates-table"
                    >
                      <thead>
                        <tr>
                          <td />
                          <td>
                            Photo
                          </td>
                          <td>
                            Politician Name
                          </td>
                          <td>
                            Party
                          </td>
                          <td>
                            Party Logo
                          </td>
                          <td>
                            Action
                          </td>
                        </tr>
                      </thead>
                      <tbody>
                        <tr />
                      </tbody>
                    </table>
                    <h4>
                      No Candidate for this office
                    </h4>
                  </div>
                </article>
              </div>
              <Footer>
                <footer>
                  <span>
                    Copyright@2019  @fantastic-genius (Andela Bootcamp Cycle41)
                  </span>
                </footer>
              </Footer>
            </div>
          </DashboardContainer>
        </Vote>
      </Connect(Vote)>
    </Router>
  </BrowserRouter>
</Provider>
`;

exports[`<Vote /> Rendering should render Vote page correctly with its children when candidates is loading 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Connect(Vote)
        candidatesLoading={true}
      >
        <Vote
          candidates={Array []}
          candidatesLoaded={false}
          candidatesLoading={false}
          cleanUp={[Function]}
          error={null}
          getOfficeCandidates={[Function]}
          getOffices={[Function]}
          getVotedCandidates={[Function]}
          offices={Array []}
          token=""
          voteCandidate={[Function]}
          voted={false}
          votedCandidates={Array []}
        >
          <DashboardContainer>
            <div
              className="container dashboard"
            >
              <Connect(DashboardNavBar)>
                <DashboardNavBar
                  signout={[Function]}
                  user={Object {}}
                >
                  <header>
                    <div
                      className="title"
                    >
                      <h3>
                        User Dashboard
                      </h3>
                    </div>
                    <div
                      className="logout-con"
                    >
                      <button
                        className="btn btn-warning"
                        id="logout"
                        onClick={[Function]}
                      >
                        <a
                          href="#"
                        >
                          Logout
                        </a>
                      </button>
                    </div>
                  </header>
                </DashboardNavBar>
              </Connect(DashboardNavBar)>
              <div
                className="main"
              >
                <UserDashboardSideBar>
                  <aside>
                    <Connect(UserInfo)>
                      <UserInfo
                        user={Object {}}
                      >
                        <div
                          className="user"
                        >
                          <div
                            className="photo"
                          >
                            <img
                              alt="User"
                              id="user-img"
                              src="test-file-stub"
                            />
                          </div>
                          <div
                            className="username"
                          >
                            <p
                              id="user-name"
                            >
                              undefined undefined
                            </p>
                          </div>
                        </div>
                      </UserInfo>
                    </Connect(UserInfo)>
                    <div
                      className="menu"
                    >
                      <ul>
                        <li>
                          <Link
                            to="/vote"
                          >
                            <a
                              href="/vote"
                              onClick={[Function]}
                            >
                              Vote
                            </a>
                          </Link>
                        </li>
                        <li>
                          <Link
                            to="/myvote"
                          >
                            <a
                              href="/myvote"
                              onClick={[Function]}
                            >
                              My Votes
                            </a>
                          </Link>
                        </li>
                      </ul>
                    </div>
                  </aside>
                </UserDashboardSideBar>
                <article>
                  <div
                    className="title-con"
                  >
                    <h3>
                      Vote Choice Candidate
                    </h3>
                    <hr />
                  </div>
                  <div
                    id="alert"
                  />
                  <div
                    className="select-con"
                  >
                    <label
                      htmlFor="office"
                    >
                      Political Office
                    </label>
                    <select
                      id="office-select"
                      name="office"
                      onChange={[Function]}
                    >
                      <option>
                        Select an Office
                      </option>
                    </select>
                  </div>
                  <div>
                    <table
                      id="candidates-table"
                    >
                      <thead>
                        <tr>
                          <td />
                          <td>
                            Photo
                          </td>
                          <td>
                            Politician Name
                          </td>
                          <td>
                            Party
                          </td>
                          <td>
                            Party Logo
                          </td>
                          <td>
                            Action
                          </td>
                        </tr>
                      </thead>
                      <tbody>
                        <tr />
                      </tbody>
                    </table>
                    <h4>
                      No Candidate for this office
                    </h4>
                  </div>
                </article>
              </div>
              <Footer>
                <footer>
                  <span>
                    Copyright@2019  @fantastic-genius (Andela Bootcamp Cycle41)
                  </span>
                </footer>
              </Footer>
            </div>
          </DashboardContainer>
        </Vote>
      </Connect(Vote)>
    </Router>
  </BrowserRouter>
</Provider>
`;
